tests/ui/concurrent_cached_size_with_redis_ty.stderr
error: `size` only applies to the default in-memory store, not `redis = true`
  --> tests/ui/concurrent_cached_size_with_redis_ty.rs:10:4
   |
10 | fn my_fn(k: i32) -> Result<i32, String> {
   |    ^^^^^
